# dpdk

./: .command  .gitignore  .gitreview  .mailmap  .travis.yml  DPDK.vpj  DPDK.vpw  DPDK.vpwhistu  MAINTAINERS  VERSION  compile.sh  dpdk.env  dpdk.init  dpdk.make  meson.build  meson_options.txt  ntacc_readme.md  readme.md  tast.ntpl
.ci/: linux-build.sh  linux-setup.sh
app/pdump/: Makefile  main.c
app/proc-info/: main.c
app/proc_info/: main.c
app/test/: test_cryptodev.c  test_cryptodev_hash_test_vectors.h  (+7 more)
app/test-crypto-perf/: cperf_options_parsing.c  cperf_test_pmd_cyclecount.c  cperf_test_throughput.c  cperf_test_vectors.c  cperf_test_verify.c  main.c
app/test-eventdev/: test_order_atq.c  test_order_queue.c  test_perf_atq.c  test_perf_common.c  test_perf_queue.c  test_pipeline_common.c
app/test-pmd/: Makefile  cmdline.c  cmdline_flow.c  cmdline_mtr.c  cmdline_tm.c  config.c  csumonly.c  parameters.c  rxonly.c  testpmd.c  testpmd.h  tm.c
buildtools/: check-experimental-syms.sh
buildtools/pmdinfogen/: meson.build  pmdinfogen.c
config/: common_base  defconfig_arm-armv7a-linuxapp-gcc  defconfig_x86_64-native-linuxapp-gcc  meson.build
devtools/: check-git-log.sh  check-symbol-change.sh  checkpatches.sh  test-meson-builds.sh  test-null.sh
drivers/net/ntacc/: Makefile  filter_flowmatcher.c  filter_flowmatcher.h  filter_keymatcher.c  filter_keymatcher.h  filter_ntacc.c  filter_ntacc.h  flowmatcher.c  flowmatcher.h  keymatcher.c  keymatcher.h  meson.build  nt_compat.h  ntacc_eventdev.c  ntacc_eventdev.h  ntacc_eventdev1.c  ntacc_eventdev2.c  ntacc_shared.c  ntacc_shared.h  rte_eth_ntacc.c  rte_eth_ntacc.h  rte_ntacc_event.h
examples/: Makefile  ntapps
lib/: Makefile
mk/: rte.app.mk  rte.cpuflags.mk  rte.sdkroot.mk  rte.sdktest.mk
pkg/: dpdk.spec
tools/: dpdk-devbind.py
usertools/: dpdk-devbind.py  dpdk-telemetry-client.py
x86_64-native-linuxapp-clang/: .config.orig  Makefile
x86_64-native-linuxapp-gcc/: .config.orig
(+991 files in other folders)
